--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ZVR75bqJsLJNQfSf7hZIjgB4NS3bScN3svzXop2maOQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
-LOG_LEVEL=debug
+
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -47,3 +47,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+
